@@ -1,3 +1,6 @@
+2011-06-23 tatuya
+* Show the owner at Inventory module listbox because the inventories can be owned by multiple sections.
+
 2011-06-02 arnaud.fontaine
 * Fix issue on stock listbox when there is no unit conversion defined.
 
